--- a/src/app/elements/placehome/placehome.component.html
+++ b/src/app/elements/placehome/placehome.component.html
@@ -1,1 +1,22 @@
+
+<app-divider>Placeholder</app-divider>
 <app-placeholder [header]="false" [line]="5"></app-placeholder>
+<app-divider>Segment</app-divider>
+<app-segment>
+    <div id="iconHeader">
+        <i class="pdf file outline icon"></i>
+        No documents are listed for this customer.
+    </div>
+    <div id="iconbutton">
+        <div class="ui primary button">Add Document</div>
+    </div>
+</app-segment>
+<app-segment>
+    <div id="iconHeader">
+        <i class="add icon"></i>
+        Add Something
+    </div>
+    <div id="iconbutton">
+        <div class="ui primary button">Click to Add</div>
+    </div>
+</app-segment>
