--- a/src/app/views/viewscompo/viewscompo.component.html
+++ b/src/app/views/viewscompo/viewscompo.component.html
@@ -1,1 +1,5 @@
-<p>viewscompo works!</p>
+<app-divider>Different Views</app-divider>
+<app-statistics [data]="statistics"></app-statistics>
+
+<app-divider>Item List</app-divider>
+<app-itemlist [items]="itemList"></app-itemlist>
