--- a/src/app/collection/collectioncompo/collectioncompo.component.html
+++ b/src/app/collection/collectioncompo/collectioncompo.component.html
@@ -1,1 +1,18 @@
-<p>collectioncompo works!</p>
+<app-divider>User Data</app-divider>
+<app-table [tableData]="tableData" [headerData]="headerData" class="striped celled"></app-table>
+
+<app-divider>Tabs</app-divider>
+<div class="ui grid">
+    <div class="four wide column">
+        <div class="ui vertical fluid tabular menu">
+            <a class="item" routerLink="./" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Biography</a>
+            <a class="item" routerLink="./companies" routerLinkActive="active" >Companies</a>
+            <a class="item" routerLink="partners" routerLinkActive="active" >Partners</a>
+        </div>
+    </div>
+    <div class="twelve wide stretch column">
+        <div class="ui segment">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
