--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,5 @@
 <div class="ui secondary pointing menu">
+    <a class="item"  routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
     <a class="item"  routerLink="/element" routerLinkActive="active">Element</a>
     <a class="item" routerLink="/modules" routerLinkActive="active">Modules</a>
     <a class="item" routerLink="/collection" routerLinkActive="active">Collection</a>
